# tale_of_an_arts_major

./: Cargo.toml  README.md
resources/levels/: TUT.tmx  level_1.tmx  level_2.tmx  level_3.tmx  level_4.tmx  test_level.tmx
src/: canvas.rs  capture.rs  main.rs  util.rs
src/entity/: components.rs  resources.rs  systems.rs
src/gui/: gui.rs  mod.rs
src/level/: mod.rs
